// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GalleryPage renders correctly 1`] = `
<DocumentFragment>
  <main>
    <header />
    <section
      class="section"
    >
      <div
        class="gallery container"
      >
        <div
          class="row"
        >
          <div
            class="col-12"
          >
            <div>
              [object Object]
            </div>
            <hr />
          </div>
          <div
            class="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
            data-cy="galleryImage"
          >
            <div>
              <img
                alt="alt"
                src="src"
              />
            </div>
          </div>
          <div
            class="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
            data-cy="galleryImage"
          >
            <div>
              <img
                alt="alt"
                src="src"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`GalleryPageTemplate renders GatsbyImage 1`] = `
<DocumentFragment>
  <header />
  <section
    class="section"
  >
    <div
      class="gallery container"
    >
      <div
        class="row"
      >
        <div
          class="col-12"
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          class="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
        >
          <div>
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`GalleryPageTemplate renders content correctly 1`] = `
<DocumentFragment>
  <header />
  <section
    class="section"
  >
    <div
      class="gallery container"
    >
      <div
        class="row"
      >
        <div
          class="col-12"
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          class="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
        >
          <div>
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`GalleryPageTemplate renders html content correctly 1`] = `
<DocumentFragment>
  <header />
  <section
    class="section"
  >
    <div
      class="gallery container"
    >
      <div
        class="row"
      >
        <div
          class="col-12"
        >
          <div>
            [object Object]
          </div>
          <hr />
        </div>
        <div
          class="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
        >
          <div>
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
